# kibotos

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: backend-guide.md  design-doc.md  miner-guide.md  validator-guide.md
kibotos/: __init__.py  cli.py  config.py
kibotos/api/: __init__.py  dependencies.py  main.py
kibotos/api/routes/: __init__.py  evaluation.py  health.py  prompts.py  scores.py  submissions.py
kibotos/chain/: __init__.py  weights.py
kibotos/db/: __init__.py  models.py  session.py
kibotos/evaluator/: __init__.py  main.py  relevance.py  technical.py  vlm.py
kibotos/miner/: __init__.py  commands.py  uploader.py
kibotos/prompts/: __init__.py
kibotos/scheduler/: __init__.py  cycles.py  main.py  weights.py
kibotos/storage/: __init__.py  s3.py
kibotos/validator/: __init__.py  main.py
tests/: __init__.py
